wrap fix

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -15,6 +15,9 @@
 			flex-basis: 100%;
 			width: 100%;
 		}
+		.wrap-mob {
+			flex-wrap: wrap;
+		}
 	}
 
 	.d-none-mob {
